# mono-copilot

./: .gitignore  README.md  pyproject.toml  test_ba_simple.py  test_full_run.py  test_pe_simple.py
apps/copilot/: Dockerfile.sandbox  README.md  pyproject.toml
apps/copilot/src/copilot/: main.py  mono.py  orchestrator.py
apps/copilot/src/copilot/agents/: ba_agent.py  pe_agent.py  types.py
apps/copilot/src/copilot/config/: __init__.py  authorized_sources.py
apps/copilot/src/copilot/models/: approval.py  source_model.py
apps/copilot/src/copilot/services/: context_manager.py  file_manager.py  research_service.py
apps/copilot/src/copilot/skills/: __init__.py  ba_skill.py  ba_skill.py.bak  pe_skill.py
projects/: brd.md  sources.json
sh/: test_agent_bun.sh  test_agent_skills.sh
tests/: __init__.py  test_ba_skill.py  test_ba_skill_comprehensive.py  test_integration.py  test_orchestrator.py
