[project]
name = "copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.139.0",
    "openai-agents>=0.17.7",
    "python-dotenv>=1.2.2",
    "runtime",
]

[project.scripts]
mono = "copilot.mono:main"
start = "copilot.main:run"

[tool.uv.sources]
runtime = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
